# py-base-api

./: .env.dev.example  .env.example  .env.prod.example  .gitignore  AGENTS.md  README.md  alembic.ini  pyproject.toml  pyproyect.toml  requirements.txt
app/: main.py
app/alembic/: env.py
app/core/: config.py  exceptions.py  logger.py
app/db/: __init__.py  session.py
docker/: Dockerfile.dev  Dockerfile.prod  docker-compose.dev.yml  docker-compose.prod.yml
docker/nginx/: nginx.conf
docker/nginx/certs/: .gitkeep
docker/nginx/templates/: default.conf.template
scripts/: generate_cert.sh
