[project]
name = "base-api"
version = "0.1.0"
description = "FastAPI core template"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.0",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.129.0",
    "gunicorn>=23.0.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[tool.uv]
package = false
